@@ -1,5 +1,11 @@
 2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
 
+	* sharpnldap.sln:
+	* sharpnldap.pidb:
+	* sharpnldap.userprefs: 
+
+2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
+
 	* src/ATTRNAME.cs: title attribute
 
 2010-06-24  Jared L Jennings  <jaredljennings@gmail.com>
